gcc/testsuite/rust/rustc/ui/attributes/unsafe/double-unsafe-attributes_dg.rs
#[unsafe(unsafe(no_mangle))]
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-error "" "" { target *-*-* } .-2 }
// { dg-error "" "" { target *-*-* } .-3 }
fn a() {}

fn main() {}

